--- a/css/power_calculator.css
+++ b/css/power_calculator.css
@@ -83,7 +83,7 @@ table {
   width: 98%;
   left: 1%;
   display: none;
-  z-index: 99;
+  z-index: 999;
   box-sizing: border-box; }
   .help .arow_help {
     position: absolute;
@@ -144,8 +144,7 @@ table {
       .power_calculator_header {
         background-size: cover;
         text-align: center;
-        padding: 0px;
-        padding-bottom: 15px; } }
+        padding: 0px; } }
     .power_calculator_header i {
       width: 109px;
       height: 104px;
@@ -153,6 +152,9 @@ table {
       background-position: 0px 0px;
       display: inline-block;
       margin-top: 5px; }
+      @media (max-width: 746px) {
+        .power_calculator_header i {
+          display: none; } }
     .power_calculator_header h3 {
       display: inline-block;
       font: 17px/24px Verdana;
@@ -284,7 +286,7 @@ table {
               float: left;
               box-sizing: border-box;
               color: #4b4b4b;
-              min-width: 130px; }
+              min-width: 100px; }
             .power_calculator_coontent_form_base_line .input_block .select {
               text-align: left;
               height: 42px;
@@ -299,7 +301,7 @@ table {
               font-weight: bold;
               float: left;
               box-sizing: border-box;
-              min-width: 130px; }
+              min-width: 100px; }
               .power_calculator_coontent_form_base_line .input_block .select input[type='text'] {
                 border: none;
                 float: left;
@@ -351,6 +353,8 @@ table {
                   .power_calculator_coontent_form_base_line .input_block .select .option li a {
                     width: 100%;
                     display: inline-block; }
+                    .power_calculator_coontent_form_base_line .input_block .select .option li a:hover {
+                      color: #620909; }
                 .power_calculator_coontent_form_base_line .input_block .select .option .big {
                   font-size: 12px;
                   line-height: 14px;
@@ -468,7 +472,10 @@ table {
           font-weight: bold;
           color: #015968;
           margin-top: 32px;
-          float: left; }
+          float: left;
+          padding: 3px; }
+          .power_calculator_coontent_form .button_line a:hover {
+            outline: 1px solid #b80000; }
           @media (max-width: 703px) {
             .power_calculator_coontent_form .button_line a {
               display: inline-block;
@@ -497,6 +504,7 @@ table {
             float: left; }
           .power_calculator_coontent_form .button_line .selected_block a {
             float: left;
+            padding: 0px;
             text-decoration: underline;
             color: #2f61a8;
             margin-top: 0px;
@@ -505,6 +513,9 @@ table {
             margin-left: 5px;
             pointer-events: none;
             cursor: default; }
+            .power_calculator_coontent_form .button_line .selected_block a:hover {
+              color: #620909;
+              outline: none; }
         .power_calculator_coontent_form .button_line .selected_activ {
           -moz-opacity: 1;
           opacity: 1;
