--- a/sass/power_calculator.scss
+++ b/sass/power_calculator.scss
@@ -9,7 +9,7 @@
   width: 98%;
   left:1%;
   display: none;
-  z-index: 99;
+  z-index: 999;
   box-sizing: border-box;
   .arow_help{
     position: absolute;
@@ -72,7 +72,7 @@
       background-size: cover;
       text-align: center;
       padding: 0px;
-      padding-bottom: 15px;
+
     }
     i {
       width: 109px;
@@ -81,6 +81,9 @@
       background-position: 0px 0px;
       display: inline-block;
       margin-top: 5px;
+      @media(max-width: 746px){
+      display: none;
+      }
     }
     h3 {
       display: inline-block;
@@ -237,7 +240,7 @@
               float: left;
               box-sizing: border-box;
               color: #4b4b4b;
-              min-width: 130px;
+              min-width: 100px;
             }
             .select {
               text-align: left;
@@ -251,7 +254,7 @@
               font-weight: bold;
               float: left;
               box-sizing: border-box;
-              min-width: 130px;
+              min-width: 100px;
               input[type='text'] {
                 border: none;
                 float: left;
@@ -307,6 +310,9 @@
                   a {
                     width: 100%;
                     display: inline-block;
+                    &:hover{
+                      color:#620909 ;
+                    }
                   }
                 }
                 .big{
@@ -451,6 +457,10 @@
           color: #015968;
           margin-top: 32px;
           float: left;
+          padding: 3px;
+          &:hover{
+            outline: 1px solid #b80000;
+          }
           @media(max-width: 703px){
             display: inline-block;
             float: none;
@@ -479,9 +489,11 @@
           }
           p{
             float: left;
+
           }
           a{
             float: left;
+            padding: 0px;
             text-decoration: underline;
             color: #2f61a8;
             margin-top: 0px;
@@ -490,7 +502,10 @@
             margin-left: 5px;
             pointer-events: none;
             cursor: default;
-
+&:hover{
+  color: #620909;
+  outline: none;
+}
 
           }
         }
