--- a/sass/price.scss
+++ b/sass/price.scss
@@ -1686,7 +1686,8 @@
         .mail{
           font: 13px/20px 'robotobold';
           color: #024753;
-          margin-left: 42px;
+          margin-left: 36px;
+          padding: 3px;
           &:hover{
             color: #25613c;
             span{
