--- a/css/price.css
+++ b/css/price.css
@@ -1356,7 +1356,8 @@
           margin-left: 36px;
           padding: 3px; }
           .section__recommended_header_zag .mail:hover {
-            color: #25613c; }
+            color: #25613c;
+            outline: 1px solid #b80000; }
             .section__recommended_header_zag .mail:hover span {
               background: none; }
           .section__recommended_header_zag .mail span {
@@ -1369,10 +1370,12 @@
           font: 13px/22px 'robotobold';
           color: #0151bd;
           text-decoration: underline;
-          margin-right: 30px;
-          margin-top: 35px; }
+          margin-right: 24px;
+          margin-top: 29px;
+          padding: 3px; }
           .section__recommended_header_info a:hover {
-            color: #25613c; }
+            color: #25613c;
+            outline: 1px solid #b80000; }
           .section__recommended_header_info a:nth-child(1) {
             margin-right: 0px; }
           .section__recommended_header_info a .see {
