--- a/sass/price.scss
+++ b/sass/price.scss
@@ -1690,6 +1690,7 @@
           padding: 3px;
           &:hover{
             color: #25613c;
+            outline: 1px solid #b80000;
             span{
               background: none;
             }
@@ -1707,10 +1708,12 @@
           font: 13px/22px 'robotobold';
           color: #0151bd;
           text-decoration: underline;
-          margin-right: 30px;
-          margin-top: 35px;
+          margin-right: 24px;
+          margin-top: 29px;
+          padding: 3px;
           &:hover{
             color: #25613c;
+            outline: 1px solid #b80000;
           }
           &:nth-child(1){
             margin-right: 0px;
