--- a/sass/power_calculator.scss
+++ b/sass/power_calculator.scss
@@ -74,6 +74,9 @@
       padding: 0px;
 
     }
+    @media(max-height: 920px){
+      display: none;
+    }
     i {
       width: 109px;
       height: 104px;
@@ -140,6 +143,9 @@
           border-bottom: 1px solid #dedede;
           float: left;
           margin-top: 1px;
+          @media(max-height: 920px){
+            line-height: 26px;
+          }
 @media(max-width: 406px){
   line-height: 20px;
   padding: 12.8px;
@@ -366,6 +372,9 @@
           border: 1px solid #dedede;
           border-right: none;
           float: left;
+          @media(max-height: 920px){
+            line-height: 26px;
+          }
 @media(max-width: 535px){
   line-height: 20px;
   padding: 12.8px;
@@ -451,6 +460,9 @@
         border-bottom: 1px solid #c3c3c3;
         padding: 0px 24px;
         box-sizing: border-box;
+        @media(max-height: 920px){
+          min-height: 0px;
+        }
         a {
           font: 14px/22px Verdana;
           font-weight: bold;
@@ -458,6 +470,9 @@
           margin-top: 32px;
           float: left;
           padding: 3px;
+          @media(max-height: 920px){
+            margin-top: 10px;
+          }
           &:hover{
             outline: 1px solid #b80000;
           }
@@ -483,12 +498,19 @@
           float: right;
           font: 12px/81px Verdana;
           @include opacity(0.5);
+          @media(max-height: 920px){
+            line-height: 22px;
+
+          }
           @media(max-width: 703px){
             display: inline-block;
             float: none;
           }
           p{
             float: left;
+            @media(max-height: 920px){
+              margin-top: 10px;
+            }
 
           }
           a{
@@ -502,6 +524,10 @@
             margin-left: 5px;
             pointer-events: none;
             cursor: default;
+            @media(max-height: 920px){
+              margin-top: 10px;
+              line-height: 22px;
+            }
 &:hover{
   color: #620909;
   outline: none;
@@ -525,6 +551,9 @@
             width: 100%;
             text-align: center;
           }
+          @media(max-height: 920px){
+            min-height: 0px;
+          }
         }
         .power_calculator_coontent_form_more {
           min-height: 81px;
@@ -534,6 +563,9 @@
           @media(max-width: 703px){
             width: 100%;
             text-align: center;
+          }
+          @media(max-height: 920px){
+            min-height: 0px;
           }
 
 
@@ -550,6 +582,10 @@
       @include opacity(0.5);
       @media(max-width: 629px){
         padding-bottom: 20px;
+      }
+      @media(max-height: 920px){
+        min-height: 0;
+        padding-bottom: 5px;
       }
       &_zag_block{
         float: left;
@@ -586,6 +622,9 @@
             float: none;
             margin-right: 0px;
           }
+          @media(max-height: 920px){
+            display: none;
+          }
         }
         h3{
           float: left;
@@ -595,6 +634,9 @@
           @media(max-width: 703px){
             display: inline-block;
             float: none;
+          }
+          @media(max-height: 920px){
+            line-height: 26px;
           }
         }
 
@@ -626,6 +668,9 @@
           color: #212121;
           font-weight: bold;
           margin-bottom: 7px;
+         @media(max-height: 920px){
+           line-height: 22px;
+         }
           i{
             display: inline-block;
             width: 13px;
@@ -645,7 +690,9 @@
             line-height: 10px;
             font-weight: bold;
             cursor: pointer;
-
+            @media(max-height: 920px){
+             display: none;
+            }
           }
         }
        &_input_line{
@@ -657,6 +704,9 @@
            display: inline-block;
            margin-top: 10px;
            display: none;
+           @media(max-height: 920px){
+             margin-top: 5px;
+           }
            .namber {
              float: right;
              display: block;
@@ -694,17 +744,26 @@
            box-sizing: border-box;
            background: #f8f8f8;
            min-width: 153px;
+           @media(max-height: 920px){
+            line-height: 30px;
+           }
            span{
              font: 14px/20px 'Georgia-BoldItalic';
              margin-top: 14px;
              color: #662211;
              display: none;
+             @media(max-height: 920px){
+               margin-top: 8px;
+             }
            }
            .namber{
              font: 18px/44px Arial;
              font-weight: bold;
              color: #662211;
              display: none;
+             @media(max-height: 920px){
+               line-height: 30px;
+             }
            }
            .no_namber{
              display: inline-block;
