--- a/css/power_calculator.css
+++ b/css/power_calculator.css
@@ -83,7 +83,7 @@ table {
   width: 98%;
   left: 1%;
   display: none;
-  z-index: 99;
+  z-index: 999;
   box-sizing: border-box; }
   .help .arow_help {
     position: absolute;
@@ -144,8 +144,10 @@ table {
       .power_calculator_header {
         background-size: cover;
         text-align: center;
-        padding: 0px;
-        padding-bottom: 15px; } }
+        padding: 0px; } }
+    @media (max-height: 920px) {
+      .power_calculator_header {
+        display: none; } }
     .power_calculator_header i {
       width: 109px;
       height: 104px;
@@ -153,6 +155,9 @@ table {
       background-position: 0px 0px;
       display: inline-block;
       margin-top: 5px; }
+      @media (max-width: 746px) {
+        .power_calculator_header i {
+          display: none; } }
     .power_calculator_header h3 {
       display: inline-block;
       font: 17px/24px Verdana;
@@ -198,6 +203,9 @@ table {
           border-bottom: 1px solid #dedede;
           float: left;
           margin-top: 1px; }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_form_base_zag {
+              line-height: 26px; } }
           @media (max-width: 406px) {
             .power_calculator_coontent_form_base_zag {
               line-height: 20px;
@@ -284,7 +292,7 @@ table {
               float: left;
               box-sizing: border-box;
               color: #4b4b4b;
-              min-width: 130px; }
+              min-width: 100px; }
             .power_calculator_coontent_form_base_line .input_block .select {
               text-align: left;
               height: 42px;
@@ -299,7 +307,7 @@ table {
               font-weight: bold;
               float: left;
               box-sizing: border-box;
-              min-width: 130px; }
+              min-width: 100px; }
               .power_calculator_coontent_form_base_line .input_block .select input[type='text'] {
                 border: none;
                 float: left;
@@ -351,6 +359,8 @@ table {
                   .power_calculator_coontent_form_base_line .input_block .select .option li a {
                     width: 100%;
                     display: inline-block; }
+                    .power_calculator_coontent_form_base_line .input_block .select .option li a:hover {
+                      color: #620909; }
                 .power_calculator_coontent_form_base_line .input_block .select .option .big {
                   font-size: 12px;
                   line-height: 14px;
@@ -389,6 +399,9 @@ table {
           border: 1px solid #dedede;
           border-right: none;
           float: left; }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_form_more_zag {
+              line-height: 26px; } }
           @media (max-width: 535px) {
             .power_calculator_coontent_form_more_zag {
               line-height: 20px;
@@ -463,12 +476,21 @@ table {
         border-bottom: 1px solid #c3c3c3;
         padding: 0px 24px;
         box-sizing: border-box; }
+        @media (max-height: 920px) {
+          .power_calculator_coontent_form .button_line {
+            min-height: 0px; } }
         .power_calculator_coontent_form .button_line a {
           font: 14px/22px Verdana;
           font-weight: bold;
           color: #015968;
           margin-top: 32px;
-          float: left; }
+          float: left;
+          padding: 3px; }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_form .button_line a {
+              margin-top: 10px; } }
+          .power_calculator_coontent_form .button_line a:hover {
+            outline: 1px solid #b80000; }
           @media (max-width: 703px) {
             .power_calculator_coontent_form .button_line a {
               display: inline-block;
@@ -489,14 +511,21 @@ table {
           -moz-opacity: 0.5;
           opacity: 0.5;
           -khtml-opacity: 0.5; }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_form .button_line .selected_block {
+              line-height: 22px; } }
           @media (max-width: 703px) {
             .power_calculator_coontent_form .button_line .selected_block {
               display: inline-block;
               float: none; } }
           .power_calculator_coontent_form .button_line .selected_block p {
             float: left; }
+            @media (max-height: 920px) {
+              .power_calculator_coontent_form .button_line .selected_block p {
+                margin-top: 10px; } }
           .power_calculator_coontent_form .button_line .selected_block a {
             float: left;
+            padding: 0px;
             text-decoration: underline;
             color: #2f61a8;
             margin-top: 0px;
@@ -505,6 +534,13 @@ table {
             margin-left: 5px;
             pointer-events: none;
             cursor: default; }
+            @media (max-height: 920px) {
+              .power_calculator_coontent_form .button_line .selected_block a {
+                margin-top: 10px;
+                line-height: 22px; } }
+            .power_calculator_coontent_form .button_line .selected_block a:hover {
+              color: #620909;
+              outline: none; }
         .power_calculator_coontent_form .button_line .selected_activ {
           -moz-opacity: 1;
           opacity: 1;
@@ -521,6 +557,9 @@ table {
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_base {
               width: 100%;
               text-align: center; } }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_form .button_line .power_calculator_coontent_form_base {
+              min-height: 0px; } }
         .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
           min-height: 81px;
           padding-left: 27px;
@@ -530,6 +569,9 @@ table {
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
               width: 100%;
               text-align: center; } }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
+              min-height: 0px; } }
     .power_calculator_coontent_rezult {
       width: 100%;
       float: left;
@@ -543,6 +585,10 @@ table {
       @media (max-width: 629px) {
         .power_calculator_coontent_rezult {
           padding-bottom: 20px; } }
+      @media (max-height: 920px) {
+        .power_calculator_coontent_rezult {
+          min-height: 0;
+          padding-bottom: 5px; } }
       .power_calculator_coontent_rezult_zag_block {
         float: left;
         width: 100%; }
@@ -575,6 +621,9 @@ table {
               display: inline-block;
               float: none;
               margin-right: 0px; } }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_rezult_zag_block .logo {
+              display: none; } }
         .power_calculator_coontent_rezult_zag_block h3 {
           float: left;
           font: 14px/66px Verdana;
@@ -584,6 +633,9 @@ table {
             .power_calculator_coontent_rezult_zag_block h3 {
               display: inline-block;
               float: none; } }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_rezult_zag_block h3 {
+              line-height: 26px; } }
       .power_calculator_coontent_rezult .power {
         text-align: left; }
         @media (max-width: 629px) {
@@ -609,6 +661,9 @@ table {
           color: #212121;
           font-weight: bold;
           margin-bottom: 7px; }
+          @media (max-height: 920px) {
+            .power_calculator_coontent_rezult_block h4 {
+              line-height: 22px; } }
           .power_calculator_coontent_rezult_block h4 i {
             display: inline-block;
             width: 13px;
@@ -628,6 +683,9 @@ table {
             line-height: 10px;
             font-weight: bold;
             cursor: pointer; }
+            @media (max-height: 920px) {
+              .power_calculator_coontent_rezult_block h4 i {
+                display: none; } }
         .power_calculator_coontent_rezult_block_input_line {
           float: left;
           width: 100%;
@@ -636,6 +694,9 @@ table {
             display: inline-block;
             margin-top: 10px;
             display: none; }
+            @media (max-height: 920px) {
+              .power_calculator_coontent_rezult_block_input_line .power_block {
+                margin-top: 5px; } }
             .power_calculator_coontent_rezult_block_input_line .power_block .namber {
               float: right;
               display: block;
@@ -670,16 +731,25 @@ table {
             box-sizing: border-box;
             background: #f8f8f8;
             min-width: 153px; }
+            @media (max-height: 920px) {
+              .power_calculator_coontent_rezult_block_input_line p {
+                line-height: 30px; } }
             .power_calculator_coontent_rezult_block_input_line p span {
               font: 14px/20px 'Georgia-BoldItalic';
               margin-top: 14px;
               color: #662211;
               display: none; }
+              @media (max-height: 920px) {
+                .power_calculator_coontent_rezult_block_input_line p span {
+                  margin-top: 8px; } }
             .power_calculator_coontent_rezult_block_input_line p .namber {
               font: 18px/44px Arial;
               font-weight: bold;
               color: #662211;
               display: none; }
+              @media (max-height: 920px) {
+                .power_calculator_coontent_rezult_block_input_line p .namber {
+                  line-height: 30px; } }
             .power_calculator_coontent_rezult_block_input_line p .no_namber {
               display: inline-block; }
     .power_calculator_coontent .active {
