--- a/css/modal.css
+++ b/css/modal.css
@@ -114,15 +114,25 @@
           background-image: url("../img/sprite_section.png");
           background-position: -51px -192px; }
     .brend_block_box_logo_block {
-      width: 100%;
-      overflow: hidden; }
+      width: 100%; }
       .brend_block_box_logo_block a {
         display: block;
         float: left;
         width: 50%;
-        text-align: center; }
+        text-align: center;
+        transition: 1s;
+        -moz-transition: 1s;
+        -webkit-transition: 1s;
+        -o-transition: 1s; }
+        .brend_block_box_logo_block a:hover {
+          -moz-transform: scale(1.4);
+          -webkit-transform: scale(1.4);
+          -o-transform: scale(1.4);
+          -ms-transform: scale(1.4);
+          transform: scale(1.4); }
         .brend_block_box_logo_block a img {
-          max-width: 100%; }
+          max-width: 100%;
+          height: 44px; }
   .brend_block_footer {
     float: right;
     width: 100%;
@@ -168,6 +178,8 @@
       text-decoration: underline;
       color: #003c95;
       box-sizing: border-box; }
+      .brend_block_footer_brend_all:hover {
+        color: #620909; }
       .brend_block_footer_brend_all span {
         display: block;
         font-weight: bold;
@@ -345,6 +357,9 @@
         box-sizing: border-box;
         padding-left: 3px;
         margin: 12px 0px; }
+        .area_block_inverter_block_name:hover {
+          color: #620909;
+          font-weight: bold; }
       .area_block_inverter_block_price {
         width: 100%;
         padding-left: 7px;
@@ -397,6 +412,8 @@
       text-align: center;
       display: block;
       box-sizing: border-box; }
+      .price_block_link_block:hover p {
+        color: #620909; }
       .price_block_link_block img {
         max-width: 100%; }
       .price_block_link_block p {
