--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -3,6 +3,38 @@
   -moz-border-radius: $r;
   -webkit-border-radius: $r;
 }
+@mixin left_radius($r){
+  border-top-left-radius: $r;
+  -moz-border-top-left-radius: $r;
+  -webkit-border-top-left-radius: $r;
+  border-top-left-radius: $r;
+  -moz-border-top-left-radius: $r;
+  -webkit-border-top-left-radius: $r;
+  border-bottom-left-radius: $r;
+  -webkit-border-bottom-left-radius: $r;
+  -moz-border-bottom-left-radius: $r;
+
+}
+@mixin right_radius($r){
+  border-top-right-radius: $r;
+  -moz-border-top-right-radius: $r;
+  -webkit-border-top-right-radius: $r;
+  border-bottom-right-radius: $r;
+  -moz-border-bottom-right-radius: $r;
+  -webkit-border-bottom-right-radius: $r;
+
+}
+@mixin top_left_radius($r){
+  -moz-border-radius-topleft: $r;
+  -webkit-border-top-left-radius: $r;
+  border-top-left-radius: $r;
+}
+@mixin opacity($r){
+  -moz-opacity: $r;
+  opacity: $r;
+  -khtml-opacity: $r
+}
+
 @mixin transit($s) {
   transition: $s;
   -moz-transition: $s;
@@ -146,14 +178,23 @@
     }
     &_logo_block {
       width: 100%;
-      overflow: hidden;
+
       a {
         display: block;
         float: left;
         width: 50%;
         text-align: center;
+        @include transit(1s);
+        &:hover{
+          -moz-transform: scale(1.4);
+          -webkit-transform: scale(1.4);
+          -o-transform: scale(1.4);
+          -ms-transform: scale(1.4);
+          transform: scale(1.4);
+        }
         img {
           max-width: 100%;
+          height: 44px;
         }
       }
     }
@@ -210,6 +251,9 @@
       text-decoration: underline;
       color: #003c95;
       box-sizing: border-box;
+      &:hover{
+        color: #620909;
+      }
       span {
         display: block;
         font-weight: bold;
@@ -420,6 +464,10 @@
         box-sizing: border-box;
         padding-left: 3px;
         margin: 12px 0px;
+        &:hover{
+          color:#620909;
+          font-weight: bold;
+        }
       }
       &_price {
         width: 100%;
@@ -483,6 +531,11 @@
       text-align: center;
       display: block;
       box-sizing: border-box;
+      &:hover{
+        p{
+          color: #620909;
+        }
+      }
       img {
         max-width: 100%;
       }
