--- a/css/power_calculator.css
+++ b/css/power_calculator.css
@@ -1,24 +1,75 @@
-.top_help {
-  position: absolute;
-  padding: 15px 22px;
-  font: 14px/20px 'Roboto-Medium';
-  background: #FFFFFF;
-  border: 1px solid #ff0000;
-  border-radius: 5px;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  width: 98%;
-  left: 1%;
-  display: none;
-  z-index: 999;
-  box-sizing: border-box; }
-  .top_help .arow_help {
-    bottom: -14px;
-    position: absolute;
-    z-index: 99;
-    width: 30px;
-    height: 14px;
-    background-image: url("../img/temp_sprite/help_arow_b.png"); }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, sub, sup, tt, var,
+b, u, i, em center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video, select, input {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: top;
+  font-weight: normal; }
+
+a {
+  text-decoration: none;
+  color: inherit;
+  outline: none; }
+
+input:focus {
+  outline: none; }
+
+select:focus {
+  outline: none; }
+
+textarea {
+  border: 0px;
+  padding: 0px; }
+  textarea:focus {
+    outline: none; }
+
+header, section, footer {
+  width: 100%; }
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+.res_line {
+  text-align: justify; }
+
+.line_block {
+  display: inline-block;
+  float: none; }
+
+.after {
+  display: inline-block;
+  width: 0px;
+  height: 0px;
+  margin-left: 100%; }
 
 .help {
   position: absolute;
@@ -32,7 +83,7 @@
   width: 98%;
   left: 1%;
   display: none;
-  z-index: 999;
+  z-index: 99;
   box-sizing: border-box; }
   .help .arow_help {
     position: absolute;
@@ -93,10 +144,8 @@
       .power_calculator_header {
         background-size: cover;
         text-align: center;
-        padding: 0px; } }
-    @media (max-height: 920px) {
-      .power_calculator_header {
-        display: none; } }
+        padding: 0px;
+        padding-bottom: 15px; } }
     .power_calculator_header i {
       width: 109px;
       height: 104px;
@@ -104,9 +153,6 @@
       background-position: 0px 0px;
       display: inline-block;
       margin-top: 5px; }
-      @media (max-width: 746px) {
-        .power_calculator_header i {
-          display: none; } }
     .power_calculator_header h3 {
       display: inline-block;
       font: 17px/24px Verdana;
@@ -152,9 +198,6 @@
           border-bottom: 1px solid #dedede;
           float: left;
           margin-top: 1px; }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_form_base_zag {
-              line-height: 26px; } }
           @media (max-width: 406px) {
             .power_calculator_coontent_form_base_zag {
               line-height: 20px;
@@ -241,7 +284,7 @@
               float: left;
               box-sizing: border-box;
               color: #4b4b4b;
-              min-width: 100px; }
+              min-width: 130px; }
             .power_calculator_coontent_form_base_line .input_block .select {
               text-align: left;
               height: 42px;
@@ -256,7 +299,7 @@
               font-weight: bold;
               float: left;
               box-sizing: border-box;
-              min-width: 100px; }
+              min-width: 130px; }
               .power_calculator_coontent_form_base_line .input_block .select input[type='text'] {
                 border: none;
                 float: left;
@@ -308,8 +351,6 @@
                   .power_calculator_coontent_form_base_line .input_block .select .option li a {
                     width: 100%;
                     display: inline-block; }
-                    .power_calculator_coontent_form_base_line .input_block .select .option li a:hover {
-                      color: #620909; }
                 .power_calculator_coontent_form_base_line .input_block .select .option .big {
                   font-size: 12px;
                   line-height: 14px;
@@ -348,9 +389,6 @@
           border: 1px solid #dedede;
           border-right: none;
           float: left; }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_form_more_zag {
-              line-height: 26px; } }
           @media (max-width: 535px) {
             .power_calculator_coontent_form_more_zag {
               line-height: 20px;
@@ -425,21 +463,12 @@
         border-bottom: 1px solid #c3c3c3;
         padding: 0px 24px;
         box-sizing: border-box; }
-        @media (max-height: 920px) {
-          .power_calculator_coontent_form .button_line {
-            min-height: 0px; } }
         .power_calculator_coontent_form .button_line a {
           font: 14px/22px Verdana;
           font-weight: bold;
           color: #015968;
           margin-top: 32px;
-          float: left;
-          padding: 3px; }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_form .button_line a {
-              margin-top: 10px; } }
-          .power_calculator_coontent_form .button_line a:hover {
-            outline: 1px solid #b80000; }
+          float: left; }
           @media (max-width: 703px) {
             .power_calculator_coontent_form .button_line a {
               display: inline-block;
@@ -460,21 +489,14 @@
           -moz-opacity: 0.5;
           opacity: 0.5;
           -khtml-opacity: 0.5; }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_form .button_line .selected_block {
-              line-height: 22px; } }
           @media (max-width: 703px) {
             .power_calculator_coontent_form .button_line .selected_block {
               display: inline-block;
               float: none; } }
           .power_calculator_coontent_form .button_line .selected_block p {
             float: left; }
-            @media (max-height: 920px) {
-              .power_calculator_coontent_form .button_line .selected_block p {
-                margin-top: 10px; } }
           .power_calculator_coontent_form .button_line .selected_block a {
             float: left;
-            padding: 0px;
             text-decoration: underline;
             color: #2f61a8;
             margin-top: 0px;
@@ -483,13 +505,6 @@
             margin-left: 5px;
             pointer-events: none;
             cursor: default; }
-            @media (max-height: 920px) {
-              .power_calculator_coontent_form .button_line .selected_block a {
-                margin-top: 10px;
-                line-height: 22px; } }
-            .power_calculator_coontent_form .button_line .selected_block a:hover {
-              color: #620909;
-              outline: none; }
         .power_calculator_coontent_form .button_line .selected_activ {
           -moz-opacity: 1;
           opacity: 1;
@@ -506,9 +521,6 @@
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_base {
               width: 100%;
               text-align: center; } }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_form .button_line .power_calculator_coontent_form_base {
-              min-height: 0px; } }
         .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
           min-height: 81px;
           padding-left: 27px;
@@ -518,9 +530,6 @@
             .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
               width: 100%;
               text-align: center; } }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_form .button_line .power_calculator_coontent_form_more {
-              min-height: 0px; } }
     .power_calculator_coontent_rezult {
       width: 100%;
       float: left;
@@ -534,10 +543,6 @@
       @media (max-width: 629px) {
         .power_calculator_coontent_rezult {
           padding-bottom: 20px; } }
-      @media (max-height: 920px) {
-        .power_calculator_coontent_rezult {
-          min-height: 0;
-          padding-bottom: 5px; } }
       .power_calculator_coontent_rezult_zag_block {
         float: left;
         width: 100%; }
@@ -570,9 +575,6 @@
               display: inline-block;
               float: none;
               margin-right: 0px; } }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_rezult_zag_block .logo {
-              display: none; } }
         .power_calculator_coontent_rezult_zag_block h3 {
           float: left;
           font: 14px/66px Verdana;
@@ -582,9 +584,6 @@
             .power_calculator_coontent_rezult_zag_block h3 {
               display: inline-block;
               float: none; } }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_rezult_zag_block h3 {
-              line-height: 26px; } }
       .power_calculator_coontent_rezult .power {
         text-align: left; }
         @media (max-width: 629px) {
@@ -610,9 +609,6 @@
           color: #212121;
           font-weight: bold;
           margin-bottom: 7px; }
-          @media (max-height: 920px) {
-            .power_calculator_coontent_rezult_block h4 {
-              line-height: 22px; } }
           .power_calculator_coontent_rezult_block h4 i {
             display: inline-block;
             width: 13px;
@@ -632,9 +628,6 @@
             line-height: 10px;
             font-weight: bold;
             cursor: pointer; }
-            @media (max-height: 920px) {
-              .power_calculator_coontent_rezult_block h4 i {
-                display: none; } }
         .power_calculator_coontent_rezult_block_input_line {
           float: left;
           width: 100%;
@@ -643,9 +636,6 @@
             display: inline-block;
             margin-top: 10px;
             display: none; }
-            @media (max-height: 920px) {
-              .power_calculator_coontent_rezult_block_input_line .power_block {
-                margin-top: 5px; } }
             .power_calculator_coontent_rezult_block_input_line .power_block .namber {
               float: right;
               display: block;
@@ -680,25 +670,16 @@
             box-sizing: border-box;
             background: #f8f8f8;
             min-width: 153px; }
-            @media (max-height: 920px) {
-              .power_calculator_coontent_rezult_block_input_line p {
-                line-height: 30px; } }
             .power_calculator_coontent_rezult_block_input_line p span {
               font: 14px/20px 'Georgia-BoldItalic';
               margin-top: 14px;
               color: #662211;
               display: none; }
-              @media (max-height: 920px) {
-                .power_calculator_coontent_rezult_block_input_line p span {
-                  margin-top: 8px; } }
             .power_calculator_coontent_rezult_block_input_line p .namber {
               font: 18px/44px Arial;
               font-weight: bold;
               color: #662211;
               display: none; }
-              @media (max-height: 920px) {
-                .power_calculator_coontent_rezult_block_input_line p .namber {
-                  line-height: 30px; } }
             .power_calculator_coontent_rezult_block_input_line p .no_namber {
               display: inline-block; }
     .power_calculator_coontent .active {
