--- a/sass/style.scss
+++ b/sass/style.scss
@@ -128,6 +128,7 @@ header {
           z-index: 999;
           margin-top: 2px;
           display: none;
+          padding-bottom: 5px;
           li{
             display: block;
             float: none;
